--- a/src/features/common/templates/AuthenticatedSubPageTemplate.scss
+++ b/src/features/common/templates/AuthenticatedSubPageTemplate.scss
@@ -16,10 +16,8 @@
         flex-flow: column;
         position: relative;
         flex-wrap: nowrap;
-        max-width: 960px;
-        width;: 100%;
+        width: 100%;
         margin: 10px auto 30px;
-        position: relative;
         max-width: $content-max-width-desktop;
 
         @include mobile() {
